[metadata]
# Meta data for the project as described in PEP 345
# field names are case-insensitive
name = bilab
version = 1.0.0
platform =
supported-platform=
summary = python tools for structural and sequence analysis
#description =
#description-file = README.txt
keywords = Bioinformatics
home_page = http://www.bi.a.u-tokyo.ac.jp
download-url =
author = Wei CAO
author_email = davecao@bi.a.u-tokyo.ac.jp
maintainer = Wei CAO
maintainer-email = davecao@bi.a.u-tokyo.ac.jp
license = GPL
classifier = Development Status :: 2 - Alpha
    Topic :: Bioinformatics
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Topic :: Documentation
    Topic :: Text Processing :: General
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: C
    Programming Language :: C++
requires-dist =
provides-dist =
obsoletes-dist =
#requires-python =
requires-externals =
project-url =

[global]
# Global options for Distutils2 shared with Distutil1
# commands =
# compiler =
# setup_hook =


[files]
# the root directory containing all packages.
# If not provided Distutils2 will use the current directory. *optional

packages_root =

# a list of packages the project includes *optional *multi

packages =
    bilab
    bilab.aaprop
    bilab.chemicals
    bilab.concurrent
    bilab.geometry
    bilab.geometry.distance
    bilab.io
    bilab.ml
    bilab.optimization
    bilab.sequence
    bilab.structure
    bilab.structure.atomic
    bilab.structure.kdtree
    bilab.utilities
    bilab.webservice
    bilab.tests

#package_data =
#    aaindex1 = bilab/data/aaindex1
#    aaindex2 = bilab/data/aaindex2
#    aaindex3 = bilab/data/aaindex3

# a list of packages the project includes *optional *multi
modules =

#a list of scripts the project includes *optional *multi
scripts =

#a list of patterns to include extra files *optional *multi
extra_files =
    README.txt
    LICENSE.txt
    CHANGES.txt
    CONTRIBUTORS.txt

# {datadir} is system-depended path. on Linux may be '/usr/share',
# then the final path looks like /usr/share/bilab/data/aaindex*
#
# {appdata} is '/usr/share/bilab', i.e., {datadir}/{project_name}/resources
resources =
    data/aaindex* = {appdata}

[extension:bilab.geometry._distance_wrap]
sources = bilab/geometry/distance/distance_wrap.c
include_dirs = /opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/numpy/core/include
[extension:bilab.structure._CKDTree]
# configure items:

sources = bilab/structure/kdtree/KDTree.c
          bilab/structure/kdtree/KDTreemodule.c

include_dirs = /opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/numpy/core/include
# define_macros =
# undef_macros =
# library_dirs =
# libraries =
# runtime_library_dirs =
# extra_objects =
extra_compile_args = -fPIC -O2
# extra_link_args = "`gcc -print-file-name=libgcc.a`" -shared
# export_symbols =
# swig_opts =
language = c
# optional =

#[extension:bilab.linalg._CWMatrix]
#sources = bilab/linalg/export.cpp

#extra_compile_args = -fPIC -O2

#extra_link_args = "`gcc -print-file-name=libgcc.a`" -shared

#language = c++

[build_ext]
# needed so that tests work without mucking with sys.path
#inplace = on

#[build_py]
#use-2to3 = True

[check]
strict = on
#all = on

[sdist]
#manifest-builders = package.module.Maker
